--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,13 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "name": "Python Debugger: Current File",
+      "type": "debugpy",
+      "request": "launch",
+      "program": "${file}",
+      "console": "integratedTerminal"
+    },
+    {
       "name": "Python: Process API Requests (Default)",
       "type": "debugpy",
       "request": "launch",
@@ -17,7 +24,9 @@
       "type": "debugpy",
       "request": "launch",
       "program": "${workspaceFolder}/.logging/process-api-requests.py",
-      "args": ["--no-clear"],
+      "args": [
+        "--no-clear"
+      ],
       "console": "integratedTerminal",
       "justMyCode": true,
       "python": "${workspaceFolder}/.logging/.venv/Scripts/python.exe",
@@ -29,7 +38,9 @@
       "type": "debugpy",
       "request": "launch",
       "program": "${workspaceFolder}/.logging/process-api-requests.py",
-      "args": ["--verbose"],
+      "args": [
+        "--verbose"
+      ],
       "console": "integratedTerminal",
       "justMyCode": true,
       "python": "${workspaceFolder}/.logging/.venv/Scripts/python.exe",
@@ -41,7 +52,11 @@
       "type": "debugpy",
       "request": "launch",
       "program": "${workspaceFolder}/.logging/process-api-requests.py",
-      "args": ["--output-dir", "${workspaceFolder}/.logging/output", "--verbose"],
+      "args": [
+        "--output-dir",
+        "${workspaceFolder}/.logging/output",
+        "--verbose"
+      ],
       "console": "integratedTerminal",
       "justMyCode": true,
       "python": "${workspaceFolder}/.logging/.venv/Scripts/python.exe",
