--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,7 +15,7 @@
       "program": "${workspaceFolder}/.logging/process-api-requests.py",
       "console": "integratedTerminal",
       "justMyCode": true,
-      "python": "${workspaceFolder}/.logging/.venv/Scripts/python.exe",
+      "python": "${workspaceFolder}/venv/Scripts/python.exe",
       "cwd": "${workspaceFolder}",
       "env": {}
     },
@@ -29,7 +29,7 @@
       ],
       "console": "integratedTerminal",
       "justMyCode": true,
-      "python": "${workspaceFolder}/.logging/.venv/Scripts/python.exe",
+      "python": "${workspaceFolder}/venv/Scripts/python.exe",
       "cwd": "${workspaceFolder}",
       "env": {}
     },
@@ -43,7 +43,7 @@
       ],
       "console": "integratedTerminal",
       "justMyCode": true,
-      "python": "${workspaceFolder}/.logging/.venv/Scripts/python.exe",
+      "python": "${workspaceFolder}/venv/Scripts/python.exe",
       "cwd": "${workspaceFolder}",
       "env": {}
     },
@@ -59,7 +59,7 @@
       ],
       "console": "integratedTerminal",
       "justMyCode": true,
-      "python": "${workspaceFolder}/.logging/.venv/Scripts/python.exe",
+      "python": "${workspaceFolder}/venv/Scripts/python.exe",
       "cwd": "${workspaceFolder}",
       "env": {}
     }
