feat: Generate Product Requirements Document (PRD)
Generated the comprehensive Product Requirements Document (PRD) for the "AI CV and Application" project.
This PRD details:
- Project Vision, Success Criteria, and Scope (MVP, Growth, Vision).
- Domain-Specific Requirements (GDPR, AI Fairness).
- Core Innovation Patterns and Validation Approach.
- Project-Specific Deep Dive requirements for Frontend and Backend.
- Detailed Functional and Non-Functional Requirements.

The `docs/bmm-workflow-status.yaml` file has been updated to mark the PRD workflow as complete, with `docs/PRD.md` as the output. This prepares the project for the next phase of Epic and Story breakdown.

--- a/docs/bmm-workflow-status.yaml
+++ b/docs/bmm-workflow-status.yaml
@@ -31,7 +31,7 @@ workflow_status:
   product-brief: docs/product-brief-ibe160-2025-11-18.md # agent: analyst
 
   # Phase 1: Planning
-  prd: required # agent: pm
+  prd: docs/PRD.md # agent: pm
   validate-prd: optional # agent: pm
   create-design: docs/ux-design-specification-COMPLETE.md # agent: ux-designer
 
