--- a/docs/bmm-workflow-status.yaml
+++ b/docs/bmm-workflow-status.yaml
@@ -32,7 +32,7 @@ workflow_status:
 
   # Phase 1: Planning
   prd: docs/PRD.md # agent: pm
-  validate-prd: optional # agent: pm
+  validate-prd: docs/validation-report-20251122173016.md # agent: pm
   create-design: docs/ux-design-specification-COMPLETE.md # agent: ux-designer
 
   # Phase 2: Solutioning
