--- a/docs/sprint-artifacts/sprint-status.yaml
+++ b/docs/sprint-artifacts/sprint-status.yaml
@@ -39,8 +39,8 @@ tracking_system: "file-system"
 story_location: "C:\Users\kayle\Desktop\SG-Gruppe-12/docs/sprint-artifacts"
 
 development_status:
-  epic-1: backlog
-  1-1-project-setup-core-infrastructure-initialization: backlog
+  epic-1: contexted
+  1-1-project-setup-core-infrastructure-initialization: drafted
   1-2-user-registration-account-creation: backlog
   1-3-user-login-session-management: backlog
   1-4-basic-profile-creation-name-contact-info: backlog
