--- a/docs/sprint-artifacts/sprint-status.yaml
+++ b/docs/sprint-artifacts/sprint-status.yaml
@@ -40,10 +40,10 @@ story_location: "C:\Users\kayle\Desktop\SG-Gruppe-12/docs/sprint-artifacts"
 
 development_status:
   epic-1: contexted
-  1-1-project-setup-core-infrastructure-initialization: drafted
-  1-2-user-registration-account-creation: backlog
-  1-3-user-login-session-management: backlog
-  1-4-basic-profile-creation-name-contact-info: backlog
+  1-1-project-setup-core-infrastructure-initialization: done
+  1-2-user-registration-account-creation: ready-for-dev
+  1-3-user-login-session-management: ready-for-dev
+  1-4-basic-profile-creation-name-contact-info: ready-for-dev
   epic-1-retrospective: optional
 
   epic-2: backlog
