--- a/docs/sprint-artifacts/sprint-status.yaml
+++ b/docs/sprint-artifacts/sprint-status.yaml
@@ -48,7 +48,7 @@ development_status:
 
   epic-2: contexted
   2-1-structured-cv-data-model-design-implementation: ready-for-dev
-  2-2-ai-powered-cv-parsing-from-file-upload: drafted
+  2-2-ai-powered-cv-parsing-from-file-upload: ready-for-dev
   2-3-user-interface-for-cv-section-editing-work-experience: backlog
   2-4-user-interface-for-cv-section-editing-education-skills-languages: backlog
   2-5-dynamic-cv-preview-template-selection: backlog
