--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # Dependencies
 /node_modules
+**/node_modules/
+package-lock.json
 
 # Environment variables
 .env
@@ -11,12 +13,17 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
+.logging/
 
 # Build output
 /dist
+**/dist/
 /build
+/tmp
+**/tmp/
 
 # Misc
 .DS_Store
 .npm
 .eslintcache
+prisma/
