--- a/docs/sprint-artifacts/sprint-status.yaml
+++ b/docs/sprint-artifacts/sprint-status.yaml
@@ -1,4 +1,4 @@
-# Sprint Status
+ # Sprint Status
 # This file tracks the progress of epics and stories through the development lifecycle.
 
 # generated: Monday 24. november 2025
@@ -40,7 +40,7 @@ story_location: "C:\Users\kayle\Desktop\SG-Gruppe-12/docs/sprint-artifacts"
 
 development_status:
   epic-1: contexted
-  1-1-project-setup-core-infrastructure-initialization: in-progress
+  1-1-project-setup-core-infrastructure-initialization: review
   1-2-user-registration-account-creation: in-progress
   1-3-user-login-session-management: ready-for-dev
   1-4-basic-profile-creation-name-contact-info: ready-for-dev
