--- a/src/package.json
+++ b/src/package.json
@@ -7,6 +7,7 @@
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint .",
     "prisma:generate": "npx prisma generate --schema ../prisma/schema.prisma"
   },
   "keywords": [
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "nodemon": "^3.1.11",
-    "prisma": "^7.0.1"
+    "prisma": "^7.0.1",
+    "eslint": "^8.57.0"
   }
 }
