feat: Consolidate project structure and update sprint artifacts
This commit integrates recent development efforts, including updates to sprint artifacts, frontend package configurations, and backend source files. It also cleans up deprecated files and adds new backend components for a more structured project setup.

- Refactored backend by removing pp.js and server.js, and adding new src/ structure with pp.ts, server.ts, and various modules.
- Updated rontend/package.json and package-lock.json for dependency management.
- Modified docs/bmm-workflow-status.yaml and added new sprint-artifacts documentation.
- Updated main package.json with new dependencies and scripts.

--- a/docs/bmm-workflow-status.yaml
+++ b/docs/bmm-workflow-status.yaml
@@ -41,6 +41,7 @@ workflow_status:
   create-architecture: docs/architecture-frontend.md # agent: architect (5 docs created)
   validate-architecture: optional # agent: architect
   solutioning-gate-check: docs/SOLUTIONING-GATE-CHECK.md # agent: architect (APPROVED)
+  create-epics-and-stories: docs/epics.md # agent: pm
 
   # Phase 3: Implementation
   sprint-planning: ready # agent: sm (Phase 2 complete, ready to start Sprint 1)
