--- a/src/package.json
+++ b/src/package.json
@@ -1,32 +1,43 @@
 {
-  "name": "cv-analyzer-api",
+  "name": "backend",
   "version": "1.0.0",
-  "description": "API for CV analysis and job application assistance.",
-  "main": "src/server.js",
+  "description": "AI CV Analyzer API",
+  "main": "dist/server.js",
   "scripts": {
-    "start": "node src/server.js",
-    "dev": "nodemon src/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint .",
-    "prisma:generate": "npx prisma generate --schema ../prisma/schema.prisma"
+    "start": "node dist/server.js",
+    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "build": "tsc",
+    "prisma:migrate": "dotenv -e ./.env -- npx prisma migrate dev --name init_users_table",
+    "prisma:generate": "npx prisma generate"
   },
-  "keywords": [
-    "cv",
-    "resume",
-    "ats",
-    "job-application"
-  ],
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^7.0.1",
-    "dotenv": "^16.0.3",
-    "express": "^5.1.0",
-    "pg": "^8.16.3"
+    "@prisma/client": "^5.7.1",
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "dotenv-cli": "^11.0.0",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
+    "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "prisma": "^5.7.1",
+    "uuid": "^9.0.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "nodemon": "^3.1.11",
-    "prisma": "^7.0.1",
-    "eslint": "^8.57.0"
+    "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.6",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/node": "^20.10.6",
+    "@types/uuid": "^9.0.7",
+    "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.3.3"
   }
 }
