--- a/docs/sprint-artifacts/sprint-status.yaml
+++ b/docs/sprint-artifacts/sprint-status.yaml
@@ -47,10 +47,10 @@ development_status:
   epic-1-retrospective: optional
 
   epic-2: contexted
-  2-1-structured-cv-data-model-design-implementation: ready-for-dev
-  2-2-ai-powered-cv-parsing-from-file-upload: ready-for-dev
-  2-3-user-interface-for-cv-section-editing-work-experience: ready-for-dev
-  2-4-user-interface-for-cv-section-editing-education-skills-languages: ready-for-dev
+  2-1-structured-cv-data-model-design-implementation: review
+  2-2-ai-powered-cv-parsing-from-file-upload: review
+  2-3-user-interface-for-cv-section-editing-work-experience: review
+  2-4-user-interface-for-cv-section-editing-education-skills-languages: in-progress
   2-5-dynamic-cv-preview-template-selection: ready-for-dev
   2-6-cv-download-functionality-pdf-docx: ready-for-dev
   2-7-autosave-unsaved-changes-warning: ready-for-dev
