--- a/src/package.json
+++ b/src/package.json
@@ -7,6 +7,7 @@
     "start": "node dist/server.js",
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "build": "tsc",
+    "test": "jest",
     "prisma:migrate": "dotenv -e ./.env -- npx prisma migrate dev --schema ../prisma/schema.prisma --name add_cv_models",
     "prisma:generate": "npx prisma generate --schema ../prisma/schema.prisma"
   },
@@ -38,6 +39,9 @@
     "@types/uuid": "^9.0.7",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "jest": "^29.7.0",
+    "@types/jest": "^29.5.11",
+    "ts-jest": "^29.1.1"
   }
 }
