--- a/docs/sprint-artifacts/sprint-status.yaml
+++ b/docs/sprint-artifacts/sprint-status.yaml
@@ -51,8 +51,8 @@ development_status:
   2-2-ai-powered-cv-parsing-from-file-upload: review
   2-3-user-interface-for-cv-section-editing-work-experience: review
   2-4-user-interface-for-cv-section-editing-education-skills-languages: in-progress
-  2-5-dynamic-cv-preview-template-selection: ready-for-dev
-  2-6-cv-download-functionality-pdf-docx: ready-for-dev
+  2-5-dynamic-cv-preview-template-selection: in-progress
+  2-6-cv-download-functionality-pdf-docx: in-progress
   2-7-autosave-unsaved-changes-warning: ready-for-dev
   2-8-cv-data-versioning: ready-for-dev
   epic-2-retrospective: optional
