--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,18 +46,18 @@
     "zustand": "^5.0.8"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.11",
     "@types/node": "^20.11.30",
     "@types/react": "^18.2.73",
     "@types/react-dom": "^18.2.22",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-config-next": "^16.0.4",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.4.3",
-    "jest": "^29.7.0",
-    "@types/jest": "^29.5.11",
     "ts-jest": "^29.1.1",
-    "jest-environment-jsdom": "^29.7.0"
+    "typescript": "^5.4.3"
   }
 }
