--- a/src/package.json
+++ b/src/package.json
@@ -27,7 +27,9 @@
     "jsonwebtoken": "^9.0.2",
     "prisma": "^5.7.1",
     "uuid": "^9.0.1",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "html-pdf-node": "^1.0.7",
+    "docx": "^8.2.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
