--- a/src/package.json
+++ b/src/package.json
@@ -1,31 +1,4 @@
 {
-  "name": "cv-analyzer-api",
-  "version": "1.0.0",
-  "description": "API for CV analysis and job application assistance.",
-  "main": "src/server.js",
-  "scripts": {
-    "start": "node src/server.js",
-    "dev": "nodemon src/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "prisma:generate": "npx prisma generate --schema ../prisma/schema.prisma"
-  },
-  "keywords": [
-    "cv",
-    "resume",
-    "ats",
-    "job-application"
-  ],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@prisma/client": "^7.0.1",
-    "dotenv": "^16.0.3",
-    "express": "^5.1.0",
-    "pg": "^8.16.3"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.11",
-    "prisma": "^7.0.1"
   "name": "backend",
   "version": "1.0.0",
   "description": "AI CV Analyzer API",
@@ -54,7 +27,10 @@
     "jsonwebtoken": "^9.0.2",
     "prisma": "^5.7.1",
     "uuid": "^9.0.1",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "html-pdf-node": "^1.0.7",
+    "docx": "^8.2.3",
+    "json-patch-es6": "^1.2.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -69,6 +45,8 @@
     "typescript": "^5.3.3",
     "jest": "^29.7.0",
     "@types/jest": "^29.5.11",
-    "ts-jest": "^29.1.1"
+    "ts-jest": "^29.1.1",
+    "supertest": "^6.3.3",
+    "@types/supertest": "^2.0.16"
   }
 }
