--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,7 @@ jobs:
         with:
           node-version: '20.x'
       - name: Install dependencies (frontend)
-        run: node -r dotenv/config npm install
+        run: npm install --ignore-scripts
         working-directory: ./frontend
       - name: Run lint (frontend)
         run: npm run lint
