Fix: Backend CI install by ignoring scripts

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
         with:
           node-version: '20.x'
       - name: Install dependencies (backend)
-        run: npm install
+        run: npm install --ignore-scripts
         working-directory: ./src
       - name: Run lint (backend)
         run: npm run lint
