feat: Implement Epic 2 CV Management Features and Epic 1 Core Setup
This commit encompasses the implementation of several key features within Epic 2 related to CV data management, as well as addressing review findings for Epic 1 setup stories.

Key Features Implemented:

- **Story 2.6: CV Download Functionality (PDF/DOCX)**
  - Implemented backend PDF/DOCX generation via Bull queue.
  - Developed frontend integration for triggering and downloading generated files.
  - Added comprehensive unit, integration, and E2E tests.

- **Story 2.3: User Interface for CV Section Editing (Work Experience)**
  - Refactored backend to a normalized data model (CV/CVComponent).
  - Implemented full CRUD for Work Experience entries across backend and frontend.
  - Included unit, integration, component, and E2E tests.

- **Story 2.4: User Interface for CV Section Editing (Education, Skills, Languages)**
  - Extended backend to support CRUD for Education, Skills, and Languages.
  - Developed reusable frontend forms and lists for these sections.
  - Added respective unit, integration, component, and E2E tests.

- **Story 2.7: Autosave & Unsaved Changes Warning**
  - Implemented debounced autosave mechanism using custom React hook.
  - Integrated unsaved changes warning for browser navigation.
  - Added unit tests for hooks and E2E tests for autosave.

- **Story 2.8: CV Data Versioning**
  - Implemented delta-based versioning for CV data using JSON patches.
  - Developed backend API for listing, viewing, and restoring CV versions.
  - Created frontend UI for version history.
  - Included unit, integration, component, and E2E tests.

Code Review Findings Addressed:

- **Story 1.1: Project Setup & Core Infrastructure Initialization**
  - Created src/.env file with placeholder DATABASE_URL (HIGH priority issue).
  - Implemented an explicit database connection test using Prisma (MEDIUM priority issue).

- **Story 1.2: User Registration & Account Creation**
  - All tasks and ACs verified as co

--- a/docs/sprint-artifacts/sprint-status.yaml
+++ b/docs/sprint-artifacts/sprint-status.yaml
@@ -40,8 +40,8 @@ story_location: "C:\Users\kayle\Desktop\SG-Gruppe-12/docs/sprint-artifacts"
 
 development_status:
   epic-1: contexted
-  1-1-project-setup-core-infrastructure-initialization: review
-  1-2-user-registration-account-creation: review
+  1-1-project-setup-core-infrastructure-initialization: done
+  1-2-user-registration-account-creation: done
   1-3-user-login-session-management: review
   1-4-basic-profile-creation-name-contact-info: review
   epic-1-retrospective: optional
@@ -50,11 +50,11 @@ development_status:
   2-1-structured-cv-data-model-design-implementation: review
   2-2-ai-powered-cv-parsing-from-file-upload: review
   2-3-user-interface-for-cv-section-editing-work-experience: review
-  2-4-user-interface-for-cv-section-editing-education-skills-languages: in-progress
-  2-5-dynamic-cv-preview-template-selection: ready-for-dev
-  2-6-cv-download-functionality-pdf-docx: ready-for-dev
-  2-7-autosave-unsaved-changes-warning: ready-for-dev
-  2-8-cv-data-versioning: ready-for-dev
+  2-4-user-interface-for-cv-section-editing-education-skills-languages: review
+  2-5-dynamic-cv-preview-template-selection: review
+  2-6-cv-download-functionality-pdf-docx: review
+  2-7-autosave-unsaved-changes-warning: review
+  2-8-cv-data-versioning: review
   epic-2-retrospective: optional
 
   epic-3: contexted
