--- a/src/package.json
+++ b/src/package.json
@@ -30,7 +30,7 @@
     "zod": "^3.22.4",
     "html-pdf-node": "^1.0.7",
     "docx": "^8.2.3",
-    "json-patch-es6": "^1.2.1"
+    "fast-json-patch": "^3.1.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
