--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,3 @@
-
 name: CI
 
 on:
@@ -10,8 +9,43 @@ on:
       - main
 
 jobs:
-  verify:
+  backend-ci:
+    name: Backend CI
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - run: echo "CI is working ✅"
+      - name: Use Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20.x'
+      - name: Install dependencies (backend)
+        run: npm install --ignore-scripts
+        working-directory: ./src
+      - name: Run lint (backend)
+        run: npm run lint
+        working-directory: ./src
+      - name: Run tests (backend)
+        run: npm test
+        working-directory: ./src
+
+  frontend-ci:
+    name: Frontend CI
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Use Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20.x'
+      - name: Install dependencies (frontend)
+        run: npm install --ignore-scripts
+        working-directory: ./frontend
+      - name: Run lint (frontend)
+        run: npm run lint
+        working-directory: ./frontend
+      - name: Run type-check (frontend)
+        run: npm run type-check
+        working-directory: ./frontend
+      - name: Build (frontend)
+        run: npm run build
+        working-directory: ./frontend
