--- a/docs/sprint-artifacts/sprint-status.yaml
+++ b/docs/sprint-artifacts/sprint-status.yaml
@@ -42,7 +42,7 @@ development_status:
   epic-1: contexted
   1-1-project-setup-core-infrastructure-initialization: done
   1-2-user-registration-account-creation: done
-  1-3-user-login-session-management: review
+  1-3-user-login-session-management: ready for dev
   1-4-basic-profile-creation-name-contact-info: review
   epic-1-retrospective: optional
 
