--- a/package.json
+++ b/package.json
@@ -24,5 +24,18 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
-  }
+  },
+  "main": "index.js",
+  "directories": {
+    "doc": "docs",
+    "test": "tests"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/IBE160/SG-Gruppe-12.git"
+  },
+  "bugs": {
+    "url": "https://github.com/IBE160/SG-Gruppe-12/issues"
+  },
+  "homepage": "https://github.com/IBE160/SG-Gruppe-12#readme"
 }
