--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
         with:
           node-version: '20'
           cache: 'npm'
-          cache-dependency-path: 'src/package-lock.json'
+          cache-dependency-path: 'package-lock.json'
 
       - name: Install backend dependencies
         working-directory: ./src
@@ -108,7 +108,7 @@ jobs:
         with:
           node-version: '20'
           cache: 'npm'
-          cache-dependency-path: 'src/package-lock.json'
+          cache-dependency-path: 'package-lock.json'
 
       - name: Install backend dependencies
         working-directory: ./src
