--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "description": "Monorepo for AI CV and Job Application Assistant project.",
   "scripts": {
-    "start": "npm -w src start",
-    "dev": "npm run dev -w src & npm run dev -w frontend",
-    "build": "npm -w src build && npm -w frontend build",
-    "test": "npm -w src test && npm -w frontend test",
-    "lint": "npm -w src lint && npm -w frontend lint"
+    "start": "npm run start --workspace=src",
+    "dev": "npm run dev --workspace=src & npm run dev --workspace=frontend",
+    "build": "npm run build --workspace=src && npm run build --workspace=frontend",
+    "test": "npm run test:src && npm run test:frontend",
+    "test:src": "dotenv -e src/.env.test -- npx jest src",
+    "test:frontend": "npx jest frontend",
+    "lint": "npm run lint --workspace=src && npm run lint --workspace=frontend"
   },
   "workspaces": [
     "frontend",
@@ -18,12 +20,103 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "pg": "^8.16.3"
+    "@google/generative-ai": "^0.24.1",
+    "@hookform/resolvers": "^5.2.2",
+    "@prisma/client": "^5.7.1",
+    "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-progress": "^1.0.3",
+    "@radix-ui/react-radio-group": "^1.1.3",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slider": "^1.1.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-tooltip": "^1.0.7",
+    "@sentry/integrations": "^7.114.0",
+    "@sentry/node": "^10.27.0",
+    "bcrypt": "^5.1.1",
+    "bull": "^4.16.5",
+    "camelcase-css": "^2.0.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "docx": "^8.2.3",
+    "dotenv": "^17.2.3",
+    "express": "5.1.0",
+    "express-rate-limit": "^7.1.5",
+    "fast-json-patch": "^3.1.1",
+    "file-type": "^21.1.1",
+    "helmet": "^7.1.0",
+    "html-pdf-node": "^1.0.7",
+    "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.365.0",
+    "multer": "^2.0.2",
+    "next": "^14.2.0",
+    "pg": "^8.16.3",
+    "prisma": "^5.7.1",
+    "rate-limit-redis": "^4.3.0",
+    "react": "^18.3.0",
+    "react-dom": "^18.3.0",
+    "react-hook-form": "^7.66.1",
+    "swr": "^2.3.6",
+    "tailwind-merge": "^2.2.2",
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "^9.0.1",
+    "zod": "^4.1.13",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "@babel/preset-env": "^7.28.5",
+    "@babel/preset-react": "^7.28.5",
+    "@babel/preset-typescript": "^7.28.5",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@types/bcrypt": "^5.0.2",
+    "@types/bull": "^3.15.9",
+    "@types/cookie-parser": "^1.4.6",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.11",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/multer": "^2.0.0",
+    "@types/node": "^20.11.30",
+    "@types/react": "^18.2.73",
+    "@types/react-dom": "^18.2.22",
+    "@types/supertest": "^2.0.16",
+    "@types/uuid": "^9.0.7",
+    "autoprefixer": "^10.4.19",
+    "babel-jest": "^30.2.0",
+    "dotenv-cli": "^11.0.0",
+    "eslint": "^9.0.0",
+    "eslint-config-next": "^16.0.4",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "nodemon": "3.1.11",
+    "postcss": "^8.4.38",
+    "supertest": "^6.3.3",
+    "tailwindcss": "^3.4.1",
+    "ts-jest": "^29.4.5",
+    "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.9.3"
+  },
+  "overrides": {
+    "puppeteer": "24.31.0",
+    "cheerio": "1.0.0-rc.12",
+    "css-select": "5.1.0",
+    "lodash.pick": "4.4.0",
+    "nth-check": "2.1.1",
+    "inline-css": "4.0.3"
   },
   "main": "index.js",
   "directories": {
