--- a/docs/sprint-artifacts/sprint-status.yaml
+++ b/docs/sprint-artifacts/sprint-status.yaml
@@ -32,7 +32,7 @@
 # - SM typically drafts next story after previous one is 'done' to incorporate learnings
 # - Dev moves story to 'review', SM reviews, then Dev moves to 'done'
 
-generated: "Monday 24. november 2025"
+generated: "torsdag 27. november 2025"
 project: "ibe160"
 project_key: "ibe160"
 tracking_system: "file-system"
@@ -43,7 +43,7 @@ development_status:
   1-1-project-setup-core-infrastructure-initialization: review
   1-2-user-registration-account-creation: review
   1-3-user-login-session-management: review
-  1-4-basic-profile-creation-name-contact-info: review
+  1-4-basic-profile-creation-name-contact-info: done
   epic-1-retrospective: optional
 
   epic-2: contexted
