--- a/docs/sprint-artifacts/sprint-status.yaml
+++ b/docs/sprint-artifacts/sprint-status.yaml
@@ -47,7 +47,7 @@ development_status:
   epic-1-retrospective: optional
 
   epic-2: contexted
-  2-1-structured-cv-data-model-design-implementation: in-progress
+  2-1-structured-cv-data-model-design-implementation: done
   2-2-ai-powered-cv-parsing-from-file-upload: review
   2-3-user-interface-for-cv-section-editing-work-experience: review
   2-4-user-interface-for-cv-section-editing-education-skills-languages: review
@@ -84,4 +84,3 @@ development_status:
   5-7-ai-fairness-bias-mitigation: backlog
   epic-5-retrospective: optional# Sprint Status
 # This file tracks the progress of epics and stories through the development lifecycle.
-
