feat(story-3-1): Implement Job Description Input Interface (MVP)
This commit implements the core functionality for Story 3-1, allowing users
to input job descriptions for AI-powered analysis.

Frontend changes include:
- Creation of JobDescriptionInput.tsx component.
- Integration of JobDescriptionInput.tsx into /create-application/page.tsx.
- Setup for frontend validation, loading, error states, and API calls.
- Installation of eact-hook-form, zod, @hookform/resolvers/zod, swr, xios.
- Creation of rontend/package.json due to its absence.
- Creation of rontend/src/lib/schemas/job.ts and rontend/src/lib/hooks/useJobAnalysis.ts.
- Creation of rontend/src/lib/api/job-analysis.ts.
- Creation of frontend unit tests for JobDescriptionInput.tsx and useJobAnalysis.ts.

Backend changes include:
- Definition of POST /api/v1/jobs/analyze route.
- Implementation of job.controller.ts and job.validator.ts.
- Setup of job-analysis.service.ts for initial request acknowledgment.
- Creation of job-extraction.prompt.ts.
- Integration of validation, authentication, and rate-limiting middleware.
- Creation of backend integration tests for job.routes.test.ts.

Documentation updates:
- Creation of docs/stories/story-3-1-job-description-input-interface.md.
- Update docs/sprint-artifacts/sprint-status.yaml to 'review' for Story 3-1.
- Update docs/component-inventory-frontend.md and create docs/component-inventory-backend.md.
- Creation of docs/sprint-artifacts/story-3-1-context.md.

--- a/docs/sprint-artifacts/sprint-status.yaml
+++ b/docs/sprint-artifacts/sprint-status.yaml
@@ -58,7 +58,7 @@ development_status:
   epic-2-retrospective: optional
 
   epic-3: contexted
-  3-1-job-description-input-interface: backlog
+  3-1-job-description-input-interface: review
   3-2-ai-powered-job-description-text-extraction: backlog
   3-3-cv-job-description-keyword-matching-algorithm: backlog
   3-4-match-score-calculation-display: backlog
