--- a/docs/sprint-artifacts/sprint-status.yaml
+++ b/docs/sprint-artifacts/sprint-status.yaml
@@ -59,7 +59,7 @@ development_status:
 
   epic-3: contexted
   3-1-job-description-input-interface: review
-  3-2-ai-powered-job-description-text-extraction: backlog
+  3-2-ai-powered-job-description-text-extraction: in-progress
   3-3-cv-job-description-keyword-matching-algorithm: backlog
   3-4-match-score-calculation-display: backlog
   3-5-ats-score-calculation-display: backlog
