--- a/package.json
+++ b/package.json
@@ -8,14 +8,9 @@
     "dev": "npm run dev --workspace=src & npm run dev --workspace=frontend",
     "build": "npm run build --workspace=src && npm run build --workspace=frontend",
     "test": "npm run test:src && npm run test:frontend",
-    "test:src": "dotenv -e src/.env.test -- npx jest src",
-    "test:frontend": "npx jest frontend",
-    "lint": "npm run lint --workspace=src && npm run lint --workspace=frontend"
+    "test:src": "dotenv -e src/.env.test -- npx jest --config=src/jest.config.js",
+    "test:frontend": "npx jest --config=frontend/jest.config.js"
   },
-  "workspaces": [
-    "frontend",
-    "src"
-  ],
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -43,6 +38,7 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "@sentry/integrations": "^7.114.0",
     "@sentry/node": "^10.27.0",
+    "@supabase/supabase-js": "^2.39.0",
     "bcrypt": "^5.1.1",
     "bull": "^4.16.5",
     "camelcase-css": "^2.0.1",
@@ -86,6 +82,7 @@
     "@types/cookie-parser": "^1.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/ioredis-mock": "^8.2.3",
     "@types/jest": "^29.5.11",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/multer": "^2.0.0",
@@ -99,8 +96,10 @@
     "dotenv-cli": "^11.0.0",
     "eslint": "^9.0.0",
     "eslint-config-next": "^16.0.4",
+    "ioredis-mock": "^8.9.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-mock-extended": "^4.0.0",
     "nodemon": "3.1.11",
     "postcss": "^8.4.38",
     "supertest": "^6.3.3",
