--- a/src/.env.test
+++ b/src/.env.test
@@ -1,2 +1,6 @@
+NODE_ENV=test
 ACCESS_TOKEN_SECRET=test-access-secret
 REFRESH_TOKEN_SECRET=test-refresh-secret
+DATABASE_URL="postgresql://testuser:testpassword@localhost:5432/testdb"
+SUPABASE_URL=http://localhost:54321
+SUPABASE_KEY=dummy-key
