commit	new file:   frontend/src/components/features/cv-upload/CVParseConfirmation.test.tsx commit	modified:   frontend/src/components/features/cv-upload/CVParseConfirmation.tsx commit	new file:   frontend/src/components/features/cv-upload/CVUploadForm.test.tsx commit	modified:   frontend/src/components/features/cv-upload/CVUploadForm.tsx commit	modified:   frontend/src/lib/schemas/cv.ts commit	modified:   src/package.json commit	modified:   src/tests/unit/upload.middleware.test.ts

--- a/src/package.json
+++ b/src/package.json
@@ -7,7 +7,7 @@
     "dev": "ts-node-dev --respawn --transpile-only server.ts",
     "build": "tsc",
     "start": "node dist/server.js",
-    "lint": "echo 'No linter configured for backend yet'"
+    "lint": "echo \"No backend linter configured yet. Skipping.\" && exit 0"
   },
   "keywords": [],
   "author": "",
