--- a/docs/sprint-artifacts/sprint-status.yaml
+++ b/docs/sprint-artifacts/sprint-status.yaml
@@ -58,9 +58,9 @@ development_status:
   epic-2-retrospective: optional
 
   epic-3: contexted
-  3-1-job-description-input-interface: review
-  3-2-ai-powered-job-description-text-extraction: in-progress
-  3-3-cv-job-description-keyword-matching-algorithm: backlog
+  3-1-job-description-input-interface: done
+  3-2-ai-powered-job-description-text-extraction: done
+  3-3-cv-job-description-keyword-matching-algorithm: done
   3-4-match-score-calculation-display: backlog
   3-5-ats-score-calculation-display: backlog
   3-6-data-schema-contract-enforcement-job-analysis-inputs-outputs: backlog
