--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "dev": "npm run dev --workspace=src & npm run dev --workspace=frontend",
     "build": "cd src && npm run build && cd ../frontend && npm run build",
     "test": "npm run test:src && npm run test:frontend",
-    "test:src": "dotenv -e src/.env.test -- npx jest --config=src/jest.config.js",
-    "test:frontend": "npx jest --config=frontend/jest.config.js",
+    "test:src": "dotenv -e src/.env.test -- jest --config=src/jest.config.js",
+    "test:frontend": "jest --config=frontend/jest.config.js",
     "lint": "cd src && npm run lint && cd ../frontend && npm run lint"
   },
   "keywords": [],
