commit	modified:   .github/workflows/ci.yml commit	modified:   src/tests/unit/auth.service.test.ts

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,8 @@ jobs:
         run: npm run lint
 
       - name: Test
-        run: npm run test -- --verbose --detectOpenHandles
+        run: npm run test
+      
 
       - name: Build
         run: npm run build
