--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,10 +10,7 @@ jobs:
   # Frontend CI
   frontend-ci:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: frontend
-
+    
     steps:
       - uses: actions/checkout@v3
 
@@ -22,22 +19,21 @@ jobs:
         with:
           node-version: '20'
           cache: 'npm'
-          cache-dependency-path: frontend/package-lock.json
 
       - name: Install dependencies
         run: npm ci
 
       - name: Lint
-        run: npm run lint
+        run: npm run lint --workspace=frontend
 
       - name: Type check
-        run: npm run type-check
+        run: npm run type-check --workspace=frontend
 
       - name: Run tests
-        run: npm run test
+        run: npm run test --workspace=frontend
 
       - name: Build
-        run: npm run build
+        run: npm run build --workspace=frontend
         env:
           NEXT_PUBLIC_API_URL: ${{ secrets.NEXT_PUBLIC_API_URL }}
           NEXT_PUBLIC_SUPABASE_URL: ${{ secrets.NEXT_PUBLIC_SUPABASE_URL }}
@@ -45,9 +41,6 @@ jobs:
   # Backend CI
   backend-ci:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: src
 
     services:
       postgres:
@@ -71,24 +64,23 @@ jobs:
         with:
           node-version: '20'
           cache: 'npm'
-          cache-dependency-path: src/package-lock.json
 
       - name: Install dependencies
         run: npm ci
 
       - name: Lint
-        run: npm run lint
+        run: npm run lint --workspace=src
 
       - name: Type check
-        run: npx tsc --noEmit
+        run: npx tsc --noEmit --project src/tsconfig.json
 
       - name: Run tests
-        run: npm run test
+        run: npm run test --workspace=src
         env:
           DATABASE_URL: postgresql://postgres:postgres@localhost:5432/test
 
       - name: Build
-        run: npm run build
+        run: npm run build --workspace=src
 
   # Deployment (only on push to main)
   deploy:
